// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowSpan component should render a closed span 1`] = `
<td
  className="table-column row-span-column"
  rowSpan={2}
  style={
    {
      "borderLeft": "solid 15px red",
      "maxWidth": 110,
      "minWidth": 110,
      "width": 110,
    }
  }
>
  <div
    className="row-span-container"
  >
    <div
      className="row-span-text"
    >
      Foo
    </div>
    <ForwardRef(IconButton)
      data-testid="table-toggle-row-btn"
      onClick={[Function]}
      size="large"
    >
      <ForwardRef(Icon)>
        keyboard_arrow_right
      </ForwardRef(Icon)>
    </ForwardRef(IconButton)>
  </div>
</td>
`;

exports[`RowSpan component should render an opened span 1`] = `
<td
  className="table-column row-span-column"
  rowSpan={2}
  style={
    {
      "borderLeft": "solid 15px initial",
      "maxWidth": 110,
      "minWidth": 110,
      "width": 110,
    }
  }
>
  <div
    className="row-span-container"
  >
    <div
      className="row-span-text"
    >
      Foo
    </div>
    <ForwardRef(IconButton)
      data-testid="table-toggle-row-btn"
      onClick={[Function]}
      size="large"
    >
      <ForwardRef(Icon)>
        keyboard_arrow_down
      </ForwardRef(Icon)>
    </ForwardRef(IconButton)>
  </div>
</td>
`;
